Handle incoming activity from the Bot in `frontend` Javascript

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-GB" data-bot-url="http://localhost:3000/directline">
   <head>
-    <title>(Nick-bot) Web Chat: Full-featured bundle</title>
+    <title> Nick-bot (Web Chat) </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="./webchat.js" data-src="https://cdn.botframework.com/botframework-webchat/latest/webchat.js"></script>
     <style>
@@ -15,6 +15,13 @@
       #webchat {
         height: 100%;
         width: 100%;
+      }
+      #webchat iframe {
+        border: none;
+        border-radius: .3rem;
+        display: block;
+        height: 160px;
+        width: 320px;
       }
     </style>
   </head>
