Fix `public/frontend` Javascript; Add an "embed.image" intent

--- a/public/index.html
+++ b/public/index.html
@@ -17,11 +17,11 @@
         width: 100%;
       }
       #webchat iframe {
-        border: none;
+        border: 1px solid #888;
         border-radius: .3rem;
         display: block;
         height: 160px;
-        width: 320px;
+        width: 300px;
       }
     </style>
   </head>
