Add speech-synthesis/ text to speech (TTS) to `frontend` Javascript

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,9 @@
         height: 100%;
         width: 100%;
       }
+      #webchat * {
+        font-size: 1.1rem;
+      }
       #webchat iframe {
         border: 1px solid #888;
         border-radius: .3rem;
