initial Simplified Chinese corpus; support `zh-CN` in Bot & frontend
* Plus, fix in `radio-player`;
* Add work-in-progress/ Todo sections to README

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,9 @@
 <html lang="en-GB" data-bot-url="http://localhost:3000/directline">
   <head>
     <meta charset="utf-8" />
-    <title> Nick-bot (Web Chat) </title>
+    <meta http-equiv="Content-Language" content="en-GB, zh-CN, en, zh" data-supported-locales />
+
+    <title lang="en"> Nick-bot (Web Chat) </title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="./webchat.js" data-src="https://cdn.botframework.com/botframework-webchat/latest/webchat.js"></script>
@@ -11,7 +13,7 @@
   <body>
     <div id="webchat" role="main" aria-label="Nick-bot">
 
-      <h1 class="wc-loading"> Nick-bot loading ... </h1>
+      <h1 class="wc-loading" lang="en"> Nick-bot loading ... </h1>
 
     </div>
 
