Implement `BotCustomSpeech.speechPonyfill()` synthesis/recognition class
* Plus, update `..webchat..` peerDependency from 4.7.1 >> 4.8.0

--- a/public/index.html
+++ b/public/index.html
@@ -2,21 +2,21 @@
 <html lang="en-GB" data-bot-url="http://localhost:3000/directline">
   <head>
     <meta charset="utf-8" />
-    <meta http-equiv="Content-Language" content="en-GB, zh-CN, en, zh" data-supported-locales />
+    <meta http-equiv="Content-Language" content="en-GB,zh-CN,en,zh" data-supported-locales />
 
     <title lang="en"> Nick-bot (Web Chat) </title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="./webchat.js" data-src="https://cdn.botframework.com/botframework-webchat/latest/webchat.js"></script>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <div id="webchat" role="main" aria-label="Nick-bot">
 
-      <h1 class="wc-loading" lang="en"> Nick-bot loading ... </h1>
+      <h1 class="wc-loading" lang="en"> Nick-bot loading &hellip; </h1>
 
     </div>
 
-    <script type="module" src="./frontend.js"></script>
+    <script src="./lib/webchat-4.8.0.js" data-CDN-src="https://cdn.botframework.com/botframework-webchat/latest/webchat.js"></script>
+    <script src="./frontend.js" type="module"></script>
   </body>
 </html>
