--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <title lang="en"> Nick-bot (Web Chat) </title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="manifest" href="./manifest.webmanifest" />
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
