Bug #9/#6, Initial implementation of user authentication via Passport
* Using HTTP Basic authentication, and JS-file based user management

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,8 @@
 
     </div>
 
+    <button id="logout-button">Log out</button>
+
     <script src="./lib/webchat-4.8.0.js" data-CDN-src="https://cdn.botframework.com/botframework-webchat/latest/webchat.js"></script>
     <script src="./frontend.js" type="module"></script>
   </body>
