Bug #6, Glitch Node.js hosting ~ fix compatibility

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,8 @@
 
     <button id="logout-button">Log out</button>
 
-    <script src="./lib/webchat-4.8.0.js" data-CDN-src="https://cdn.botframework.com/botframework-webchat/latest/webchat.js"></script>
+    <!-- <script src="./lib/webchat-4.9.2.js"></script> -->
+    <script src="https://cdn.botframework.com/botframework-webchat/latest/webchat.js" crossorigin="anonymous"></script>
     <script src="./frontend.js" type="module"></script>
   </body>
 </html>
